# concierge-py

./: .gitignore  CLAUDE.md  README.md  UPSTREAM_SYNC.md  pyproject.toml  spread.yaml
.claude/: hooks.yaml  instructions.md  settings.json
.claude/commands/: ci.md  lint.md  test.md
.claude/logs/: 2025-12-12-convert-go-to-python.txt  2025-12-13-configure-claude-code.txt  2025-12-13-lets-change-our-type-checker-to-ty.txt  2025-12-13-linting-and-tests-pass.txt  2025-12-13-standard-github-workflows.txt  2025-12-13-standard-python-logging.txt  2025-12-31-lets-fix-the-typing-errors-and-add-unit-tests.txt  2025-12-31-running-the-spread-tests-in-github-fails-with-lots.txt  2025-12-31-running-uv-run-ruff-check-shows-lots-of-errors.txt  2025-12-31-some-of-the-spread-tests-pass-but-not-all-will-t.txt  2025-12-31-there-are-zizmor-issues-with-the-changed-workflows.txt  2026-01-02-this-session-is-being-continued-from-a-previous-co.txt
.claude/transcripts/1bad730b-b624-42c9-ab2d-3a192a45006a/: 1bad730b-b624-42c9-ab2d-3a192a45006a.jsonl  index.html  page-001.html  page-002.html  page-003.html  page-004.html  page-005.html  page-006.html  page-007.html  page-008.html  page-009.html
.claude/transcripts/2266864e-5a75-4d6a-9c4d-b125612922de/: 2266864e-5a75-4d6a-9c4d-b125612922de.jsonl  index.html  page-001.html  page-002.html
.claude/transcripts/458a30d5-b10d-47c8-9008-acfc5de2cf07/: 458a30d5-b10d-47c8-9008-acfc5de2cf07.jsonl  index.html  page-001.html  page-002.html
.claude/transcripts/4599754e-12c8-4ae0-b055-caa94b5bb4e6/: 4599754e-12c8-4ae0-b055-caa94b5bb4e6.jsonl  index.html  page-001.html  page-002.html
.claude/transcripts/5956086a-f11b-40e6-a722-39477069351c/: 5956086a-f11b-40e6-a722-39477069351c.jsonl  index.html  page-001.html  page-002.html  page-003.html  page-004.html  page-005.html
.claude/transcripts/80196a93-aaaf-4ef3-91db-0ef0e2c6c774/: 80196a93-aaaf-4ef3-91db-0ef0e2c6c774.jsonl
.claude/transcripts/8db85420-ee3d-473e-af1c-de7c2ae03e43/: 8db85420-ee3d-473e-af1c-de7c2ae03e43.jsonl  index.html  page-001.html
.claude/transcripts/974f8d8e-d831-4826-b661-7c8cd91a0688/: 974f8d8e-d831-4826-b661-7c8cd91a0688.jsonl  index.html  page-001.html
.claude/transcripts/a7ab7bcb-243f-4ef7-815a-e6042183c6e8/: a7ab7bcb-243f-4ef7-815a-e6042183c6e8.jsonl  index.html  page-001.html  page-002.html
.claude/transcripts/b4904fb2-8903-4d40-81cf-dda9e04d91d6/: b4904fb2-8903-4d40-81cf-dda9e04d91d6.jsonl  index.html  page-001.html  page-002.html  page-003.html  page-004.html
.claude/transcripts/be0eff16-763c-46b0-bb57-911837b3ae9a/: be0eff16-763c-46b0-bb57-911837b3ae9a.jsonl
.claude/transcripts/d4820153-ba98-4853-b522-230836c47845/: d4820153-ba98-4853-b522-230836c47845.jsonl  index.html  page-001.html  page-002.html
.claude/transcripts/d912e252-6e1a-405e-8eee-7a012d8198f5/: d912e252-6e1a-405e-8eee-7a012d8198f5.jsonl
.claude/transcripts/daadb6cf-0bd5-4f80-8135-8fd3eccf141c/: index.html  (+5 more)
.github/: dependabot.yaml  zizmor.yml
.github/workflows/: ci.yaml  pages.yaml  pr-title.yaml  publish.yaml  spread.yaml  zizmor.yaml
tests/juju-extra-bootstrap-args/: concierge.yaml  task.yaml
tests/juju-model-defaults/: concierge.yaml
tests/overrides-env/: task.yaml
tests/provider-none/: concierge.yaml  task.yaml
tests/unit/: test_config_loader.py  test_config_models.py  test_config_presets.py  test_core_executable.py  test_core_plan.py  test_juju_credentials.py  test_providers_factory.py  test_system_command.py  test_system_models.py
(+28 files in other folders)
